# BoosterOpenning

./: .gitignore  README.md  docker-compose.yml  local.yml  production.yaml  requirements.txt
backend/: Dockerfile  manage.py  nohup.out  pyproject.toml  worker-entrypoint.sh
backend/backend/: celery.py  settings.py  urls.py
backend/cards/: admin.py  config.json  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/cards/management/commands/: import_cards.py  list_rarity.py
backend/cards/migrations/: 0001_initial.py  0002_alter_card_rarity.py  0002_card_number_card_subtype_card_supertype_card_type.py  0002_cardrarity_card_rarity_fk.py  0003_alter_card_large_image_alter_card_small_image.py  0003_alter_card_type.py  0004_alter_card_subtype.py  0004_booster.py  0005_booster_name.py  0005_card_holo_type.py  0005_rename_large_image_card_largeimage_and_more.py  0006_card_extension_id.py  0006_rename_largeimage_card_large_image_and_more.py  0007_booster_extension_id_usersbooster.py  0008_set_alter_usersbooster_booster_delete_booster.py  0009_booster_card_user_delete_usersbooster.py  0010_alter_card_user.py  0011_merge_20231230_0754.py  0012_alter_booster_number.py
backend/cards/templates/admin/: import_set.html  (+1 more)
backend/cards/utils/: booster.py
backend/cards/views/: admin.py  cards.py
backend/certificate/: caadmin.netskope.com.crt
backend/users/: models.py  serializers.py  tests.py  token_claim.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_bio.py  0002_user_delete_useraccount.py  0003_alter_user_options.py
(+48 files in other folders)
